--- a/css/main.css
+++ b/css/main.css
@@ -368,14 +368,15 @@ header {
   position: fixed;
   background: #ffffff;
   z-index: 1000;
+  height: 100vh;
 }
 
 .sidebar-wrapp {
   padding: 80px 0 0 15px;
-  background-color: gray;
-  list-style: none;
-  height: 740px;
-  width: 365px;
+  background: #faf5f5;
+  list-style-type: none;
+  height: 100vh;
+  width: 90%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -504,13 +505,14 @@ header {
 .servises__card {
   height: 401px;
   width: 370px;
-  border-radius: 10px 70px 10px 10px;
+  border-radius: 10px 10px 10px 10px;
   -webkit-box-shadow: 0px 4px 20px 0px #00000029;
           box-shadow: 0px 4px 20px 0px #00000029;
   background-image: url("../../img/Subtract.svg");
-  background-size: cover;
+  background-size: contain;
   position: relative;
   background-repeat: no-repeat;
+  position: relative;
   margin: 0 30px 30px 0;
   background-color: #ffffff;
   position: relative;
@@ -518,6 +520,20 @@ header {
 
 .servises__card:nth-child(3n) {
   margin-right: 0;
+}
+
+.servises__card::before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  content: "";
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 80px 80px 0;
+  border-color: transparent #00000009 transparent transparent;
 }
 
 .servises__card img {
@@ -569,6 +585,7 @@ header {
 }
 
 .card__title {
+  margin-top: 15px;
   font-size: 28px;
   font-weight: 700;
   line-height: 35px;
@@ -1158,6 +1175,11 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.navbar__icon img {
+  width: 32px;
+  height: 32px;
 }
 
 .search-input {
