--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,51 +1,48 @@
 header {
-    width: 100%;
-    height: 700px;
-    background-color: $color-light-white;
-  }
-  .sidebar{
-    position: fixed;
-    background: #ffffff;
-    z-index: 1000;
-    
-    
-  }
-  .sidebar-wrapp{
-    padding: 80px 0 0 15px;
-    background-color: gray;
-    list-style: none;
-    height: 740px;
-width: 365px;
-display: flex;
-flex-direction: column;
-  }
-
-  .sidebar__list{
-    margin-top:15px;
-    font-family: "Orbitron", sans-serif;
-font-size: 33px;
-font-weight: 700;
-line-height: 43px;
-
+  width: 100%;
+  height: 700px;
+  background-color: $color-light-white;
+}
+.sidebar {
+  position: fixed;
+  background: #ffffff;
+  z-index: 1000;
+  height: 100vh;
+}
+.sidebar-wrapp {
+  padding: 80px 0 0 15px;
+  background: #faf5f5;
+  list-style-type: none;
+  height: 100vh;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
 }
 
-.sidebar__link{
-    text-decoration: none;
-    color: rgba(0, 20, 70, 1);
+.sidebar__list {
+  margin-top: 15px;
+  font-family: "Orbitron", sans-serif;
+  font-size: 33px;
+  font-weight: 700;
+  line-height: 43px;
+}
 
-  }
+.sidebar__link {
+  text-decoration: none;
+  color: rgba(0, 20, 70, 1);
+}
 
-  .sidebar-icon{
-    margin-top: 70px;
-    text-align: center;
-  }
+.sidebar-icon {
+  margin-top: 70px;
+  text-align: center;
+}
 
-  .close-btn{
-    margin-left: 15px;
-    margin-bottom: 30px;
-    height: 36px;
-width: 36px;
-border-radius: 2px;
-background-color: transparent;
-border: 1px solid rgba(193, 199, 215, 1);
-  }
+.close-btn {
+  margin-left: 15px;
+  margin-bottom: 30px;
+  height: 36px;
+  width: 36px;
+  border-radius: 2px;
+  background-color: transparent;
+  border: 1px solid rgba(193, 199, 215, 1);
+}
