--- a/scss/blocks/_topnavbar.scss
+++ b/scss/blocks/_topnavbar.scss
@@ -29,6 +29,13 @@ justify-content: space-between;
     display: flex;
     align-items: center;
 }
+.navbar__icon{
+    img{
+
+        width: 32px;
+        height: 32px;
+    }
+}
 
 .search-input{
     position: relative;
