--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -18,9 +18,13 @@
     color: #ffffff;
 }
 .about__text{
+    font-family: "Jeko-Regular", sans-serif;
+font-size: 22px;
+font-weight: 400;
+line-height: 29px;
+text-align: justified;
     width: 570px;
 opacity: 70%;
-line-height: 28px;
 }
 .about-text{
     margin-right: 30px;
