--- a/scss/blocks/_bottomnavbar.scss
+++ b/scss/blocks/_bottomnavbar.scss
@@ -48,6 +48,8 @@ border: 1px solid #C1C7D7;
 background-color: transparent;
 }
 .phone-numer{
+    font-family: "Jeko-Medium", sans-serif;
+    line-height: 19px;
     text-decoration: none;
     color: #000000;
     
