--- a/scss/blocks/_contact.scss
+++ b/scss/blocks/_contact.scss
@@ -11,11 +11,13 @@ text-align: center;
 }
 
 .contact__subtitle{
+    font-family: "Jeko-Medium",sans-serif;
 font-size: 28px;
 font-weight: 400;
 line-height: 30px;
 text-align: center;
 margin-bottom: 40px;
+text-transform: uppercase;
 }
 
 .contact-form{
