--- a/scss/blocks/_creatives.scss
+++ b/scss/blocks/_creatives.scss
@@ -11,9 +11,12 @@
 
 
 .creatives__subtitle{
+    font-family: "Jeko-Medium", sans-serif;
+font-size: 28px;
+font-weight: 400;
+line-height: 31px;
     color: #5A5A5A;
-    font-family: "Orbitron", sans-serif;
-         font-size: 28px;
+    text-transform: uppercase;
  }
 
  .portfolio-cards{
