--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -16,12 +16,18 @@ color: #ffffff;
 }
 
 .footer-item{
+  font-family: "Jeko-Light", sans-serif;
+font-size: 19px;
+font-weight: 300;
+line-height: 23px;
 color: #999999;
 width: 273px;
   
 }
 
 .footer-text{
+  font-family: "Jeko-Medium", sans-serif;
+font-weight: 400;
   color: #ffffff;
   margin-top: 7px;
 }
