--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -11,3 +11,47 @@
        url('../fonts/orbitron-v23-latin-700.svg#Orbitron') format('svg'); /* Legacy iOS */
 }
 
+@font-face {
+  font-family: "Jeko-Bold";
+  src: url("../fonts/Jeko-Bold.woff2") format("woff2"),
+  url("../fonts/JekoBold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Jeko-Light";
+  src: url("../fonts/JekoLight.woff2") format("woff2"),
+  url("../fonts/Jeko-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Jeko-Medium";
+  src: url("../fonts/Jeko-Medium.woff2") format("woff2"),
+  url("../fonts/Jeko-Medium.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Jeko-SemiBold";
+  src: url("../fonts/Jeko-Semi-Bold.woff2") format("woff2"),
+  url("../fonts/Jeko-Semi-Bold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Jeko-ExtraBold";
+  src: url("../fonts/JekoExtra-Bold.woff") format("woff2"),
+  url("../fonts/JekoExtra-Bold.woff") format("woff");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
