--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -5,17 +5,27 @@
 @import "blocks/blocks";
 
 *,
+*
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
+ 
+  &::placeholder{
+    font-family: "Jeko-SemiBold", sans-serif;
+font-size: 24px;
+font-weight: 600;
+line-height: 29px;
+color: #ADADAD;
+
+} 
 }
 
 body {
   font-family: sans-serif;
 background-color: #ffffff;
+color: $color-dark;
 }
  
 img {
