--- a/scss/blocks/_topnavbar.scss
+++ b/scss/blocks/_topnavbar.scss
@@ -11,13 +11,18 @@ justify-content: space-between;
 }
 
 .address{
+    font-family: "Jeko-Light", sans-serif;
+font-size: 11px;
+font-style: normal;
+font-weight: 300;
+line-height: 14px;
     display: flex;
-    font-size: 12px;
-    font-weight: 300;
     color: #909090;
-    font-style: normal;
 
     .subtitle{
+        font-family: "Jeko-Medium", sans-serif;
+        font-size: 12px;
+        font-weight: 400;
         margin-left: 6px;
        line-height: 13px; 
        color: #747474;
