--- a/scss/blocks/_whatget.scss
+++ b/scss/blocks/_whatget.scss
@@ -118,9 +118,12 @@
 }
 
 .skill-card__title {
+  font-family: "Jeko-Bold", sans-serif;
+font-size: 24px;
+font-weight: 700;
+line-height: 30px;
+text-align: center;
   margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 24px;
 }
 
 .skill-card__text {
@@ -129,4 +132,8 @@
   font-weight: 300;
   margin-bottom: 10px;
   line-height: 22px;
+  font-family: "Jeko-Light", sans-serif;
+font-size: 18px;
+text-align: center;
+
 }
