--- a/scss/blocks/_topnavbar.scss
+++ b/scss/blocks/_topnavbar.scss
@@ -33,6 +33,7 @@ line-height: 14px;
 .icon-wrapper{
     display: flex;
     align-items: center;
+    
 }
 .navbar__icon{
     img{
@@ -43,17 +44,21 @@ line-height: 14px;
 }
 
 .search-input{
-    position: relative;
-    margin-left: 30px;
-    height: 34px;
-width: 200px;
-border-radius: 17px;
-padding: 12px;
-border: 1px solid #F0F2F6;
-border-radius: 17px;
+    background-color: transparent;
+    position: absolute;
+    padding: 12px;
+    height: 100%;
+    width: 100%;
+    border: none;
 }
 
 .search-wrapper{
+    height: 34px;
+    position: relative;
+    width: 200px;
+    border-radius: 17px;
+    border: 1px solid #F0F2F6;
+    background: #F9F9F9;
     position: relative;
     display: flex;
     align-items: center;
@@ -61,4 +66,22 @@ border-radius: 17px;
 .search-icon{
     position: absolute;
     right: 10px;
+}
+
+
+@include breakpoint-down(380px){
+.address{
+    font-size: 11px;
+    .subtitle{
+        width: 124px;
+    }
+}
+
+.search-wrapper{
+    height: 34px;
+    width: 34px;
+    padding: 8px;
+    border-radius: 50%;
+    
+}
 }
