--- a/scss/blocks/_contact.scss
+++ b/scss/blocks/_contact.scss
@@ -51,3 +51,12 @@ margin-top: 10px;
     font-size: 24px;
     border: none;
 }
+
+
+@include breakpoint-down(380px){
+.contact{
+    display: none;
+}
+
+
+}
