--- a/scss/blocks/_creatives.scss
+++ b/scss/blocks/_creatives.scss
@@ -67,3 +67,14 @@ font-weight: 700;
     transform: rotate(-90deg);
 }
 }
+
+
+
+
+@include breakpoint-down(380px){
+    .more-btn{
+        left: 50px;
+    }
+
+
+}
