--- a/scss/blocks/_price.scss
+++ b/scss/blocks/_price.scss
@@ -18,6 +18,7 @@ line-height: 26px;
 }
 .price-cards {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   list-style-type: none;
