--- a/scss/blocks/_whatget.scss
+++ b/scss/blocks/_whatget.scss
@@ -110,6 +110,7 @@
   }
 
   &:nth-child(6) {
+   
     &::after {
       top: 80px;
       background: url("../../img/u_shield-check.svg");
@@ -135,5 +136,43 @@ text-align: center;
   font-family: "Jeko-Light", sans-serif;
 font-size: 18px;
 text-align: center;
+
+}
+
+
+@include breakpoint-down(380px) {
+.skills{
+  width: 100%;
+  height: 100%;
+}  
+
+.skill-card{
+  width: 49%;
+  // flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
+  margin-right: 3px;
+  
+  &:nth-child(3){
+margin-right: 3px;
+  }
+  
+  &:nth-child(4), &:nth-child(5), &:nth-child(6){
+    &::before {
+      top: -40px;
+    }
+&::after{
+  left: 85px;
+  top: 50px;
+}
+  }
+
+  &::after{
+    left: 80px;
+    top: 50px;
+  }
+}
+
+
 
 }
