--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -37,3 +37,26 @@ width: 90%;
     position: relative;
     bottom: -4px;
 }
+
+
+@include breakpoint-down(380px){
+    .about-text-wrapper{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    
+        .about__text{
+width: 100%;
+            margin-bottom: 15px;
+        }
+    }
+
+    .about__img{
+        width: 100%;
+margin-left: 0;
+object-fit: cover;
+    }
+
+
+    
+}
