--- a/scss/blocks/_clients.scss
+++ b/scss/blocks/_clients.scss
@@ -1,5 +1,5 @@
 .clients{
-    height: 378px;
+    // height: 378px;
     background: #FBFBFB;
     padding: 40px 0 80px 0;
 }
@@ -27,4 +27,17 @@ margin-right: 20px;
 display: flex;
 align-items: center;
 justify-content: center;
+}
+
+
+@include breakpoint-down(380px){
+    .clients{
+        margin: 60px 0;
+    }
+
+    .clients__title{
+font-size: 32px;
+
+
+    }
 }
