--- a/scss/blocks/_creatives.scss
+++ b/scss/blocks/_creatives.scss
@@ -72,8 +72,34 @@ font-weight: 700;
 
 
 @include breakpoint-down(380px){
+  .creatives__title{
+    font-size: 33px;
+    
+  }
+  .creatives__subtitle{
+    font-size: 20px;
+    line-height: 22px;
+    
+  }
+  
+    .portfolio-card{
+       width: 100%;
+margin:10px 0;
+
+&:nth-child(6){
+margin-bottom: 0;
+}
+   }
+   
     .more-btn{
-        left: 50px;
+       font-size: 20px;
+        background: #F5F5F5;
+        border-radius: 4px;
+        left: 0;
+padding:20px 150px;
+        &::before{
+            display: none;
+        }
     }
 
 
