--- a/scss/blocks/_servises.scss
+++ b/scss/blocks/_servises.scss
@@ -1,6 +1,5 @@
 .servises{
     width: 100%;
-    height: 1500px;
 }
 .wrapper{
     display: flex;
@@ -181,7 +180,25 @@ color: #ffffff;
 
 
 @include breakpoint-down(380px){
+
+.servises__title{
+    margin:20px 0;
+}    
 .servises__form{
-    display: none;
+left: 0;
+padding:0 22px;
+width: 100%;
+
+}
+.servises-form__input{
+    width: 100%;
+}
+
+.servises-form__btn{
+    width: 190px;
+}
+
+.servises__card{
+  margin:10px 0;
 }
 }
