--- a/scss/blocks/_topnavbar.scss
+++ b/scss/blocks/_topnavbar.scss
@@ -69,6 +69,10 @@ line-height: 14px;
 }
 
 
+.burger-button{
+    display: none;
+}
+
 @include breakpoint-down(380px){
 .address{
     font-size: 11px;
@@ -83,5 +87,16 @@ line-height: 14px;
     padding: 8px;
     border-radius: 50%;
     
+    img{
+    left: 4px;
+    }
+
+
 }
+.burger-button{
+    display: block;
+    border-radius: 0%;
+    margin: 0 0 0 5px;
+}
+
 }
