--- a/scss/blocks/_whatget.scss
+++ b/scss/blocks/_whatget.scss
@@ -1,6 +1,4 @@
-.whatget {
-  height: 700px;
-}
+
 .whatget__title {
   margin-top: 100px;
   margin-bottom: 70px;
@@ -141,22 +139,34 @@ text-align: center;
 
 
 @include breakpoint-down(380px) {
-.skills{
+.whatget__title{
+  text-align: center;
+  font-size: 33px;
+  line-height: 43px;
+  margin-top: 50px 0 20px 0;
+}
+
+  .skills{
   width: 100%;
   height: 100%;
+  background-color: red;
 }  
 
+
 .skill-card{
-  width: 49%;
+  margin: 0;
+  width: 49.6%;
   // flex-direction: column;
   // align-items: center;
   // justify-content: center;
-  margin-right: 3px;
+  margin-right: 2px;
   
   &:nth-child(3){
-margin-right: 3px;
+margin-right: 2px;
   }
-  
+  &:nth-child(2n){
+margin-right: 0;
+  }
   &:nth-child(4), &:nth-child(5), &:nth-child(6){
     &::before {
       top: -40px;
