--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -45,9 +45,10 @@ margin-right: 15px;
 
   .footer-item{
     margin-top: 50px;
+    img{
+      margin-bottom: 50px;
+    }
   }
 
-  .footer-icon{
-    margin-bottom: 50px;
-  }
+ 
 }
