--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,7 @@ template {
   max-width: 1180px;
   padding: 0 5px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 @media only screen and (max-width: 380px) {
@@ -1232,6 +1233,9 @@ header {
 }
 
 @media only screen and (max-width: 380px) {
+  .about__title {
+    font-size: 33px;
+  }
   .about-text-wrapper {
     width: 100%;
     display: -webkit-box;
@@ -1401,12 +1405,12 @@ header {
   .skills {
     width: 100%;
     height: 100%;
-    background-color: red;
   }
   .skill-card {
     margin: 0;
-    width: 49.6%;
+    width: 49.7%;
     margin-right: 2px;
+    margin-bottom: 2px;
   }
   .skill-card:nth-child(3) {
     margin-right: 2px;
@@ -1424,6 +1428,17 @@ header {
   .skill-card::after {
     left: 80px;
     top: 50px;
+  }
+  .skill-card__title {
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .skill-card__text {
+    font-size: 12px;
+    line-height: 14px;
+    text-align: left;
+    width: 100%;
+    margin: 0;
   }
 }
 
@@ -1591,7 +1606,7 @@ footer {
   .footer-item {
     margin-top: 50px;
   }
-  .footer-icon {
+  .footer-item img {
     margin-bottom: 50px;
   }
 }
