--- a/scss/blocks/_whatget.scss
+++ b/scss/blocks/_whatget.scss
@@ -149,18 +149,17 @@ text-align: center;
   .skills{
   width: 100%;
   height: 100%;
-  background-color: red;
 }  
 
 
 .skill-card{
   margin: 0;
-  width: 49.6%;
+  width: 49.7%;
   // flex-direction: column;
   // align-items: center;
   // justify-content: center;
   margin-right: 2px;
-  
+  margin-bottom: 2px;
   &:nth-child(3){
 margin-right: 2px;
   }
@@ -182,7 +181,19 @@ margin-right: 0;
     top: 50px;
   }
 }
+.skill-card__title{
+font-size: 20px;
+line-height: 25px;
 
+}
+
+.skill-card__text{
+font-size: 12px;
+line-height: 14px;
+text-align: left;
+width: 100%;
+margin: 0;
+}
 
 
 }
