--- a/scss/blocks/_clients.scss
+++ b/scss/blocks/_clients.scss
@@ -14,8 +14,8 @@ padding-bottom: 15px;
 }
 
 .carusel{
-display: flex;
-list-style-type: none;
+    display: flex;
+    list-style-type: none;
 }
 
 .carusel-item{
@@ -27,6 +27,10 @@ margin-right: 20px;
 display: flex;
 align-items: center;
 justify-content: center;
+
+&:nth-child(1), &:nth-child(3){
+    display: none;
+}
 }
 
 
@@ -39,5 +43,10 @@ justify-content: center;
 font-size: 32px;
 
 
+    }
+
+    .carusel-item{
+        height: 80px;
+width: 140px;
     }
 }
