--- a/scss/blocks/_topnavbar.scss
+++ b/scss/blocks/_topnavbar.scss
@@ -37,9 +37,12 @@ line-height: 14px;
 }
 .navbar__icon{
     img{
-
         width: 32px;
         height: 32px;
+
+    }
+    &:nth-child(4){
+        margin-right: 30px;
     }
 }
 
@@ -59,6 +62,7 @@ line-height: 14px;
     border-radius: 17px;
     border: 1px solid #F0F2F6;
     background: #F9F9F9;
+
     position: relative;
     display: flex;
     align-items: center;
@@ -85,17 +89,20 @@ line-height: 14px;
     height: 34px;
     width: 34px;
     padding: 8px;
-    border-radius: 50%;
+    border-radius: 50px;
     
     img{
     left: 4px;
     }
 
+    &:hover{
+        width: 130px;
+    }
 
 }
 .burger-button{
     display: block;
-    border-radius: 0%;
+    border-radius: 2px;
     margin: 0 0 0 5px;
 }
 
