--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -36,6 +36,21 @@ width: 90%;
     margin: 30px 50px 0 50px;
     position: relative;
     bottom: -4px;
+    object-fit: cover;
+}
+
+@include breakpoint-down(550px){
+.about-text-wrapper{
+    flex-direction: column;
+    .about__text{
+        width: 95%;
+        margin-bottom: 20px;
+    }
+}
+.about__img{
+    width: 90%;
+    margin: 25px auto auto 5%;
+}
 }
 
 
@@ -59,7 +74,6 @@ width: 100%;
     .about__img{
         width: 100%;
 margin-left: 0;
-object-fit: cover;
     }
 
 .footer-icons{
