--- a/scss/blocks/_creatives.scss
+++ b/scss/blocks/_creatives.scss
@@ -27,10 +27,11 @@ flex-wrap: wrap;
 .portfolio-img{
     width: 100%;
     height: 100%;
- 
+    border-radius: 6px;
 }
  .portfolio-card{
-     margin: 30px 30px 0 0;
+
+    margin: 30px 30px 0 0;
     background: #FFFFFF;
     height: 340px;
     width: 360px;
@@ -68,7 +69,16 @@ font-weight: 700;
 }
 }
 
+@include breakpoint-down(580px){
+.portfolio-card{
+width: 95%;
+margin: 10px auto;
 
+&:nth-child(3), &:nth-child(6){
+margin: 10px auto;
+}
+}
+}
 
 
 @include breakpoint-down(380px){
@@ -96,7 +106,8 @@ margin-bottom: 0;
         background: #F5F5F5;
         border-radius: 4px;
         left: 0;
-padding:20px 150px;
+        border: 1px solid;
+padding:20px 42%;
         &::before{
             display: none;
         }
