--- a/scss/blocks/_intro.scss
+++ b/scss/blocks/_intro.scss
@@ -27,6 +27,7 @@ width: 583px;
 }
 
 .swipe-btn{
+    bottom: 50px;
     font-family: "Jeko-Bold", sans-serif;
     font-size: 20px;
     line-height: 25px;
@@ -56,14 +57,14 @@ left: 47%;
         margin:100px 0 100px 10px;
     }
     .intro__title{
-        width: 350px;
+        width: 95%;
 font-size: 22px;
 line-height: 24px;
 letter-spacing: 0em;
 
     }
      .intro__subtitle{
-    width: 350px;
+    width: 100%;
 font-size: 16px;
 line-height: 19px;
 }
