--- a/scss/blocks/_whatget.scss
+++ b/scss/blocks/_whatget.scss
@@ -195,3 +195,23 @@ padding-bottom: 10px;
 
 
 }
+
+@include breakpoint-down(350px) {
+.skills{
+  flex-direction: column;
+align-items: center;
+  .skill-card{
+    width: 99%;
+
+    &:nth-child(odd){
+      margin-right: 0;
+    }
+&::after{
+  left: 47%;
+}
+
+  }
+}
+
+
+}
